--- a/index.html
+++ b/index.html
@@ -24,6 +24,19 @@
         <p>Welcome to my portfolio! I am an aspiring Product Manager with a passion for creating innovative solutions...</p>
     </section>
 
+    <section id="experiences">
+        <h2>Experiences</h2>
+        <div class="experience">
+            <h3>Experience 1</h3>
+            <p>Description of the experience.</p>
+        </div>
+        <div class="experience">
+            <h3>Experience 2</h3>
+            <p>Description of the experience.</p>
+        </div>
+        <!-- Add more experiences as needed -->
+    </section>
+    
     <section id="projects">
         <h2>Projects</h2>
         <div class="project">
